--- a/project_CNN_pizza_steak.ipynb
+++ b/project_CNN_pizza_steak.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPBHqlR8ECRvOVS6AMXqG2",
+      "authorship_tag": "ABX9TyMFyikVZMYL9+YjG7s/kGED",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,43 +76,12 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "\n",
-        "# Walk through pizza_steak directory and list number of files\n",
-        "for dirpath, dirnames, filenames in os.walk(\"pizza_steak\"):\n",
-        "  print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.\")"
+        "import os"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YCmqLOcd92Ff",
-        "outputId": "32731ef1-2ead-44c6-edf6-5e60148fe653"
+        "id": "YCmqLOcd92Ff"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "There are 2 directories and 0 images in 'pizza_steak'.\n",
-            "There are 2 directories and 0 images in 'pizza_steak/test'.\n",
-            "There are 0 directories and 250 images in 'pizza_steak/test/steak'.\n",
-            "There are 0 directories and 250 images in 'pizza_steak/test/pizza'.\n",
-            "There are 2 directories and 0 images in 'pizza_steak/train'.\n",
-            "There are 0 directories and 750 images in 'pizza_steak/train/steak'.\n",
-            "There are 0 directories and 750 images in 'pizza_steak/train/pizza'.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BcPXReIp_9ek"
-      },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -315,6 +284,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "------------------------------------------------------------------------------------"
+      ],
+      "metadata": {
+        "id": "i8VLK_XtGmk_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Create a function to import an image and resize it to be able to be used with our model\n",
@@ -324,14 +302,14 @@
         "  and reshapes it to (img_shape, img_shape, colour_channel).\n",
         "  \"\"\"\n",
         "  # Read in target file (an image)\n",
-        "  img = tf.io.read_file(filename)\n",
+        "  img = tf.io.read_file(filename) # will read the file name/input the file name .......!.........\n",
         "\n",
         "  # Decode the read file into a tensor & ensure 3 colour channels \n",
         "  # (our model is trained on images with 3 colour channels and sometimes images have 4 colour channels)\n",
-        "  img = tf.image.decode_image(img, channels=3)\n",
+        "  img = tf.image.decode_image(img, channels=3) # the decode_image will tell the image is in which format i.e, jpeg,... and channels tells the amount of colur channels you used while training the model\n",
         "\n",
         "  # Resize the image (to the same size our model was trained on)\n",
-        "  img = tf.image.resize(img, size = [img_shape, img_shape])\n",
+        "  img = tf.image.resize(img, size = [img_shape, img_shape]) #the image.resize() will resize the image into which size you trained the model.\n",
         "\n",
         "  # Rescale the image (get all values between 0 and 1)\n",
         "  img = img/255.\n",
@@ -426,26 +404,22 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 571
+          "base_uri": "https://localhost:8080/"
         },
         "id": "AOsLvzBpCb_p",
-        "outputId": "7cd7c50d-ae77-4462-f5f8-1ad209009986"
+        "outputId": "4914827a-90b6-40bd-e491-8e99606c6e3a"
       },
-      "execution_count": 24,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-47476de280a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteak\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\u001b[0m in \u001b[0;36mautograph_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint:disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1146\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ag_error_metadata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1147\u001b[0;31m               \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mag_error_metadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1148\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m               \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1801, in predict_function  *\n        return step_function(self, iterator)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1790, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1783, in run_step  **\n        outputs = model.predict_step(data)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1751, in predict_step\n        return self(x, training=False)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/input_spec.py\", line 264, in assert_input_compatibility\n        raise ValueError(f'Input {input_index} of layer \"{layer_name}\" is '\n\n    ValueError: Input 0 of layer \"sequential_1\" is incompatible with the layer: expected shape=(None, 224, 224, 3), found shape=(32, 224, 3)\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.872232]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     },
@@ -455,7 +429,7 @@
         "# Add an extra axis\n",
         "print(f\"Shape before new dimension: {steak.shape}\")\n",
         "steak = tf.expand_dims(steak, axis=0) # add an extra dimension at axis 0\n",
-        "#steak = steak[tf.newaxis, ...] # alternative to the above, '...' is short for 'every other dimension'\n",
+        "#steak = steak[tf.newaxis, ...] \n",
         "print(f\"Shape after new dimension: {steak.shape}\")\n",
         "steak"
       ],
