--- a/project_CNN_pizza_steak.ipynb
+++ b/project_CNN_pizza_steak.ipynb
@@ -31,29 +31,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cosWU3gAaOSW",
-        "outputId": "0eddfa7c-cd99-4bbf-d2df-4a3c50991dd3"
+        "outputId": "2dc61377-3ee2-4eec-db5e-9f211a087739"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-09-04 19:32:19--  https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.203.128, 74.125.199.128, 74.125.20.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.203.128|:443... connected.\n",
+            "--2022-09-04 21:50:29--  https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.20.128, 108.177.98.128, 74.125.197.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.20.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 109540975 (104M) [application/zip]\n",
-            "Saving to: ‘pizza_steak.zip.1’\n",
+            "Saving to: ‘pizza_steak.zip.2’\n",
             "\n",
-            "pizza_steak.zip.1   100%[===================>] 104.47M   280MB/s    in 0.4s    \n",
+            "pizza_steak.zip.2   100%[===================>] 104.47M   253MB/s    in 0.4s    \n",
             "\n",
-            "2022-09-04 19:32:19 (280 MB/s) - ‘pizza_steak.zip.1’ saved [109540975/109540975]\n",
+            "2022-09-04 21:50:30 (253 MB/s) - ‘pizza_steak.zip.2’ saved [109540975/109540975]\n",
             "\n",
             "['pizza' 'steak']\n"
           ]
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "YCmqLOcd92Ff"
       },
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "fbPAoV9abRcY"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -157,9 +157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2RnKttJcRsB",
-        "outputId": "b2952784-7b2d-44dc-c4dd-b72d059b91fc"
+        "outputId": "26c859dc-c45e-4629-83ce-e657ceb75c7c"
       },
-      "execution_count": 5,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,19 +168,19 @@
             "Found 1500 images belonging to 2 classes.\n",
             "Found 500 images belonging to 2 classes.\n",
             "Epoch 1/7\n",
-            "47/47 [==============================] - 11s 223ms/step - loss: 0.5537 - accuracy: 0.7280 - val_loss: 0.4176 - val_accuracy: 0.8360\n",
+            "47/47 [==============================] - 10s 200ms/step - loss: 0.5946 - accuracy: 0.6767 - val_loss: 0.4111 - val_accuracy: 0.8300\n",
             "Epoch 2/7\n",
-            "47/47 [==============================] - 10s 207ms/step - loss: 0.4295 - accuracy: 0.8127 - val_loss: 0.3339 - val_accuracy: 0.8720\n",
+            "47/47 [==============================] - 9s 195ms/step - loss: 0.4235 - accuracy: 0.8187 - val_loss: 0.3435 - val_accuracy: 0.8600\n",
             "Epoch 3/7\n",
-            "47/47 [==============================] - 9s 194ms/step - loss: 0.4182 - accuracy: 0.8107 - val_loss: 0.3325 - val_accuracy: 0.8540\n",
+            "47/47 [==============================] - 9s 194ms/step - loss: 0.3899 - accuracy: 0.8327 - val_loss: 0.3410 - val_accuracy: 0.8580\n",
             "Epoch 4/7\n",
-            "47/47 [==============================] - 9s 195ms/step - loss: 0.3671 - accuracy: 0.8440 - val_loss: 0.3521 - val_accuracy: 0.8420\n",
+            "47/47 [==============================] - 9s 193ms/step - loss: 0.3861 - accuracy: 0.8440 - val_loss: 0.3332 - val_accuracy: 0.8620\n",
             "Epoch 5/7\n",
-            "47/47 [==============================] - 9s 192ms/step - loss: 0.3396 - accuracy: 0.8520 - val_loss: 0.3274 - val_accuracy: 0.8560\n",
+            "47/47 [==============================] - 9s 196ms/step - loss: 0.3129 - accuracy: 0.8740 - val_loss: 0.2881 - val_accuracy: 0.8700\n",
             "Epoch 6/7\n",
-            "47/47 [==============================] - 9s 196ms/step - loss: 0.3339 - accuracy: 0.8500 - val_loss: 0.3315 - val_accuracy: 0.8780\n",
+            "47/47 [==============================] - 9s 194ms/step - loss: 0.2973 - accuracy: 0.8767 - val_loss: 0.2824 - val_accuracy: 0.8800\n",
             "Epoch 7/7\n",
-            "47/47 [==============================] - 9s 196ms/step - loss: 0.2737 - accuracy: 0.8847 - val_loss: 0.2850 - val_accuracy: 0.8780\n"
+            "47/47 [==============================] - 9s 197ms/step - loss: 0.2212 - accuracy: 0.9233 - val_loss: 0.2834 - val_accuracy: 0.8740\n"
           ]
         }
       ]
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8g10sCyi74Yf",
-        "outputId": "9de0fe9a-c749-49ff-f713-dca2f50584e9"
+        "outputId": "c937446e-ec98-469d-b8d3-affb9f76f407"
       },
-      "execution_count": 11,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,24 +222,24 @@
           "height": 439
         },
         "id": "5hl2WMX29VXS",
-        "outputId": "e6ce73da-ef50-4696-8c7d-25c8096d43bb"
+        "outputId": "12d1d66d-4576-40e1-947c-f4b6f8f36430"
       },
-      "execution_count": 19,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-09-04 19:36:00--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/images/03-steak.jpeg\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2022-09-04 21:51:36--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/images/03-steak.jpeg\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1978213 (1.9M) [image/jpeg]\n",
-            "Saving to: ‘03-steak.jpeg.1’\n",
+            "Saving to: ‘03-steak.jpeg.2’\n",
             "\n",
-            "03-steak.jpeg.1     100%[===================>]   1.89M  --.-KB/s    in 0.03s   \n",
+            "03-steak.jpeg.2     100%[===================>]   1.89M  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2022-09-04 19:36:00 (54.6 MB/s) - ‘03-steak.jpeg.1’ saved [1978213/1978213]\n",
+            "2022-09-04 21:51:37 (61.3 MB/s) - ‘03-steak.jpeg.2’ saved [1978213/1978213]\n",
             "\n"
           ]
         },
@@ -267,9 +267,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NInm6jXnCLHN",
-        "outputId": "91e2d05d-ca70-41c9-dd30-785e1e87a4bc"
+        "outputId": "98209660-bfe4-4334-9e8a-e6f7bdc6d25e"
       },
-      "execution_count": 21,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +279,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 40
         }
       ]
     },
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "Pp8_s-5uANmA"
       },
-      "execution_count": 20,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -332,9 +332,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MwgAN5-qA64a",
-        "outputId": "8c85a4a5-707d-49fd-a680-021e45b97156"
+        "outputId": "7f82e704-f183-4961-a7d9-1365cc4c97a5"
       },
-      "execution_count": 22,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 42
         }
       ]
     },
@@ -404,22 +404,26 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 571
         },
         "id": "AOsLvzBpCb_p",
-        "outputId": "4914827a-90b6-40bd-e491-8e99606c6e3a"
+        "outputId": "81c7ab96-d96b-45f6-f8e0-f0d1cf3ce37c"
       },
-      "execution_count": 32,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.872232]], dtype=float32)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-44-47476de280a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteak\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\u001b[0m in \u001b[0;36mautograph_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1145\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint:disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1146\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ag_error_metadata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1147\u001b[0;31m               \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mag_error_metadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1148\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m               \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1801, in predict_function  *\n        return step_function(self, iterator)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1790, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1783, in run_step  **\n        outputs = model.predict_step(data)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 1751, in predict_step\n        return self(x, training=False)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\", line 67, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/input_spec.py\", line 264, in assert_input_compatibility\n        raise ValueError(f'Input {input_index} of layer \"{layer_name}\" is '\n\n    ValueError: Input 0 of layer \"sequential_2\" is incompatible with the layer: expected shape=(None, 224, 224, 3), found shape=(32, 224, 3)\n"
+          ]
         }
       ]
     },
@@ -438,9 +442,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7s_fSiN6CjSH",
-        "outputId": "e2b7cdd8-dfff-42a8-8dfc-6bc00242399d"
+        "outputId": "a97fc3b0-9a4d-4339-f722-9141521fbc04"
       },
-      "execution_count": 25,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +511,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 45
         }
       ]
     },
@@ -523,19 +527,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wdj0l73OCo60",
-        "outputId": "755d0c1e-4b7a-4ae5-d21c-9d7fd4a67abd"
+        "outputId": "8c3b66d8-f12d-42f4-e114-45378e2ae269"
       },
-      "execution_count": 27,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.872232]], dtype=float32)"
+              "array([[0.91958165]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 47
         }
       ]
     },
@@ -551,9 +555,9 @@
           "height": 36
         },
         "id": "rZ6NZiI-Cu7q",
-        "outputId": "7541db6b-5084-4ebf-a545-f4143279e4d1"
+        "outputId": "44bee900-8a8b-49b4-f6ee-e4d9903668d3"
       },
-      "execution_count": 28,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +570,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 48
         }
       ]
     },
@@ -595,7 +599,7 @@
       "metadata": {
         "id": "qtq72xysCy5V"
       },
-      "execution_count": 29,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -610,9 +614,9 @@
           "height": 264
         },
         "id": "vHhABB9pC2ZR",
-        "outputId": "80ca07af-8bb0-4963-8b5b-fdd2f0935a8f"
+        "outputId": "60f2c109-8497-4e35-ded4-9062f3739d41"
       },
-      "execution_count": 31,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
